--- a/TenmoClient/TenmoClient.csproj
+++ b/TenmoClient/TenmoClient.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="RestSharp" Version="106.15.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TenmoServer\TenmoServer.csproj" />
+  </ItemGroup>
+
 </Project>
